--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="img/favicon.jpg">
@@ -29,9 +28,9 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence"/></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+				
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -87,8 +86,8 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+				<p class="text-center fs-3 fw-5">
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -98,7 +97,7 @@
 				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
 				</h3>
-				<p class="text-center ">
+				<p class="text-center fs-3">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -116,8 +115,8 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<p class="citation">"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site? Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
+				<p class="citation-auteur">Maxime Guibard, PDG de A vos fouchettes</p>
 			</div>
 		</div>
 	</div>
@@ -146,7 +145,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h3 class="real-title">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h3>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -213,9 +212,6 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
@@ -237,50 +233,14 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
-								<li><a href="pizza.com">pizza.com</a></li>
-								<li><a href="matoiture.com">matoiture.com</a></li>
-								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-							</ul>		
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 1
-						<ul>
-							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-							<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-							<li><a href="123seoture.com">123seo.com</a></li>
-							<li><a href="123site.com">123site.com</a></li>
-							<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-							<li><a href="listeagence.com">listeagence.com</a></li>
-							<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-							<li><a href="listeseo.com">listeseo.com</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						Annuaires liste 2
-						<ul>
-							<li><a href="betterseo.com">betterseo.com</a></li>
-							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-							<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-							<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-							<li><a href="liensagogo.com">liensagogo.com</a></li>
-							<li><a href="backlink.com">backlink.com</a></li>
-							<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-						</ul>
-					</div>
 				</div>
 			</div>
-		</div>
+		</div>``
+		<p class="text-center white">
+			Agence La Panthère - Agence web basée à Lyon.<br>
+		</p>
 	</div>
+	
 </div>
 <!-- Footer - bloc-8 END -->
 
